[package]
name = "tuple-map"
version = "0.0.1"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
repository = "https://github.com/kngwyu/tuple-map"
homepage = "https://github.com/kngwyu/tuple-map"
license = "MIT"
readme = "README.md"
keywords = ["tuple", "map", "utility"]
description = "map methods for tuple"

[dependencies]
